feat: some fixes

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -245,22 +245,22 @@
     <nav class="header-nav">
       <ul class="header-nav__list">
         <li class="header-nav__list-item">
-          <a class="header-nav__list-link" href="#visiting">Visiting</a>
+          <a class="header-nav__list-link" href="index.html#visiting">Visiting</a>
         </li>
         <li class="header-nav__list-item">
-          <a class="header-nav__list-link" href="#explore">Explore</a>
+          <a class="header-nav__list-link" href="index.html#explore">Explore</a>
         </li>
         <li class="header-nav__list-item">
-          <a class="header-nav__list-link" href="#video">Video</a>
+          <a class="header-nav__list-link" href="index.html#video">Video</a>
         </li>
         <li class="header-nav__list-item">
-          <a class="header-nav__list-link" href="#gallery">Gallery</a>
+          <a class="header-nav__list-link" href="index.html#gallery">Gallery</a>
         </li>
         <li class="header-nav__list-item">
-          <a class="header-nav__list-link" href="#tickets">Tickets</a>
+          <a class="header-nav__list-link" href="index.html#tickets">Tickets</a>
         </li>
         <li class="header-nav__list-item">
-          <a class="header-nav__list-link" href="#contacts">Contacts</a>
+          <a class="header-nav__list-link" href="index.html#contacts">Contacts</a>
         </li>
       </ul>
       <div class="profile-dropdown">
