feat: some fixes

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -280,16 +280,16 @@
           </svg>
         </div>
         <ul class="profile-dropdown__nav">
-          <li class="profile-dropdown__nav-item">
+          <li class="profile-dropdown__nav-item" id="user-page-btn">
             <a class="profile-dropdown__nav-link" href="user-page.html">User page</a>
           </li>
-          <li class="profile-dropdown__nav-item">
+          <li class="profile-dropdown__nav-item" id="admin-page-btn">
             <a class="profile-dropdown__nav-link" href="admin-page.html">Settings</a>
           </li>
-          <li class="profile-dropdown__nav-item">
+          <li class="profile-dropdown__nav-item" id="login-page-btn">
             <a class="profile-dropdown__nav-link" href="login-page.html">Login</a>
           </li>
-          <li class="profile-dropdown__nav-item">
+          <li class="profile-dropdown__nav-item" id="register-page-btn">
             <a class="profile-dropdown__nav-link" href="register-page.html">Register</a>
           </li>
         </ul>
