--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -1,3 +1,4 @@
+index.html
 <footer class="footer">
   <div class="footer__container section-container">
     <div class="footer-top">
@@ -21,24 +22,24 @@
         <div class="footer-nav">
           <ul class="footer-nav__list">
             <li class="footer-nav__list-item">
-              <a class="footer-nav__list-link" href="#visiting">Visiting</a>
+              <a class="footer-nav__list-link" href="index.html#visiting">Visiting</a>
             </li>
             <li class="footer-nav__list-item">
-              <a class="footer-nav__list-link" href="#explore">Explore</a>
+              <a class="footer-nav__list-link" href="index.html#explore">Explore</a>
             </li>
             <li class="footer-nav__list-item">
-              <a class="footer-nav__list-link" href="#video">Video</a>
+              <a class="footer-nav__list-link" href="index.html#video">Video</a>
             </li>
           </ul>
           <ul class="footer-nav__list">
             <li class="footer-nav__list-item">
-              <a class="footer-nav__list-link" href="#gallery">Gallery</a>
+              <a class="footer-nav__list-link" href="index.html#gallery">Gallery</a>
             </li>
             <li class="footer-nav__list-item">
-              <a class="footer-nav__list-link" href="#tickets">Tickets</a>
+              <a class="footer-nav__list-link" href="index.html#tickets">Tickets</a>
             </li>
             <li class="footer-nav__list-item">
-              <a class="footer-nav__list-link" href="#contacts">Contacts</a>
+              <a class="footer-nav__list-link" href="index.html#contacts">Contacts</a>
             </li>
           </ul>
         </div>
