feat: add authorize

--- a/src/html/includes/admin.html
+++ b/src/html/includes/admin.html
@@ -61,6 +61,7 @@
         </form>
       </div>
     </div>
+    <a id="admin-btn-logout" class="profile__link" href="login-page.html">Log out</a>
     <a class="profile__link" href="index.html">Back to Louvre</a>
   </div>
 </section>
