--- a/src/html/includes/admin.html
+++ b/src/html/includes/admin.html
@@ -41,7 +41,7 @@
                   class="admin-tickets__price-field"
                   id="admin-basic-price"
                   type="number"
-                  value="20"
+                  value=""
                 />
               </label>
               <label class="admin-tickets__price-inner" for="senior-price">
@@ -50,7 +50,7 @@
                   class="admin-tickets__price-field"
                   id="admin-senior-price"
                   type="number"
-                  value="10"
+                  value=""
                 />
               </label>
             </div>
