--- a/src/scss/sections/main/tickets/_form.scss
+++ b/src/scss/sections/main/tickets/_form.scss
@@ -15,7 +15,9 @@
   z-index: 1;
   transition-duration: 0.3s;
   transform: scale(0);
-
+  &__visible {
+    transform: scale(1);
+  }
   &__btn-close {
     position: absolute;
     top: 30px;
