--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -88,7 +88,7 @@
             pattern="[0-9]{10,12}"
           />
         </label>
-        <button type="submit">Submit</button>
+        <button id="user-btn-data" class="profile__link" type="submit">Submit</button>
       </form>
       <div class="profile-center">
         <span class="profile-center__title">Tickets</span>
@@ -184,7 +184,7 @@
           <img alt="" class="profile__avatar-img" src="./img/user/user.png" />
           <label class="profile__avatar-btn" for="upload-img"> Upload picture </label>
         </div>
-        <a class="profile__link" href="register-page.html">Delete account</a>
+        <button id="btn-delete-account" class="profile__link">Delete account</button>
         <a id="user-btn-logout" class="profile__link" href="login-page.html">Log out</a>
       </div>
     </div>
