--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -125,6 +125,8 @@
     font-size: 20px;
     font-weight: var(--typography-fontWeightLight);
     display: flex;
+    border: none;
+    width: 100%;
     align-items: center;
     align-self: center;
     justify-content: center;
