feat: some fixes

--- a/src/html/includes/user.html
+++ b/src/html/includes/user.html
@@ -110,7 +110,7 @@
               />
             </svg>
             <span class="profile-center__item-text">Purchased</span>
-            <span class="profile-center__item-value purchased">10</span>
+            <span id="tickets-counter" class="profile-center__item-value purchased">0</span>
           </label>
           <form action="" class="profile-ticket-list">
             <div class="profile-ticket-list__container">
@@ -120,7 +120,7 @@
                     <tr
                       class="profile-ticket-list__table-row profile-ticket-list__table-row--heading"
                     >
-                      <td class="profile-ticket-list__table-data">№</td>
+                      <td class="profile-ticket-list__table-data">ID</td>
                       <td class="profile-ticket-list__table-data">Type</td>
                       <td class="profile-ticket-list__table-data">Age(Discount)</td>
                       <td class="profile-ticket-list__table-data">Date</td>
@@ -150,7 +150,7 @@
               />
             </svg>
             <span class="profile-center__item-text">Returned</span>
-            <span class="profile-center__item-value returned">3</span>
+            <span id="returned-tickets-counter" class="profile-center__item-value returned">0</span>
           </label>
           <div class="profile-returned-list">
             <div class="profile-ticket-list__container">
@@ -160,7 +160,7 @@
                     <tr
                       class="profile-ticket-list__table-row profile-ticket-list__table-row--heading"
                     >
-                      <td class="profile-ticket-list__table-data">№</td>
+                      <td class="profile-ticket-list__table-data">ID</td>
                       <td class="profile-ticket-list__table-data">Type</td>
                       <td class="profile-ticket-list__table-data">Age(Discount)</td>
                       <td class="profile-ticket-list__table-data">Date</td>
