--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -44,7 +44,7 @@
         </div>
         <ul class="footer__socials socials">
           <li class="socials__item">
-            <a class="socials__item-link" href="">
+            <a class="socials__item-link" href="https://www.youtube.com/user/louvre">
               <svg
                 class="socials__item-icon"
                 fill="none"
@@ -61,7 +61,7 @@
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__item-link" href="">
+            <a class="socials__item-link" href="https://www.instagram.com/museelouvre/">
               <svg
                 class="socials__item-icon"
                 fill="none"
@@ -78,7 +78,7 @@
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__item-link" href="">
+            <a class="socials__item-link" href="https://www.facebook.com/museedulouvre">
               <svg
                 class="socials__item-icon"
                 fill="none"
@@ -95,7 +95,7 @@
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__item-link" href="">
+            <a class="socials__item-link" href="https://twitter.com/museelouvre">
               <svg
                 class="socials__item-icon"
                 fill="none"
@@ -112,7 +112,7 @@
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__item-link" href="">
+            <a class="socials__item-link" href="https://www.pinterest.fr/museedulouvre/">
               <svg
                 class="socials__item-icon"
                 fill="none"
