--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -155,7 +155,7 @@
 
         <ul class="burger-menu__socials socials">
           <li class="socials__item">
-            <a class="socials__item-link" href="">
+            <a class="socials__item-link" href="https://www.youtube.com/user/louvre">
               <svg
                 class="socials__item-icon"
                 fill="none"
@@ -172,7 +172,10 @@
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__item-link" href="">
+            <a
+              class="socials__item-link"
+              href="https://www.instagram.com/museelouvre/?__coig_restricted=1"
+            >
               <svg
                 class="socials__item-icon"
                 fill="none"
@@ -189,7 +192,7 @@
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__item-link" href="">
+            <a class="socials__item-link" href="https://www.facebook.com/museedulouvre">
               <svg
                 class="socials__item-icon"
                 fill="none"
@@ -206,7 +209,7 @@
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__item-link" href="">
+            <a class="socials__item-link" href="https://twitter.com/museelouvre">
               <svg
                 class="socials__item-icon"
                 fill="none"
@@ -223,7 +226,7 @@
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__item-link" href="">
+            <a class="socials__item-link" href="https://www.pinterest.fr/museedulouvre/">
               <svg
                 class="socials__item-icon"
                 fill="none"
