--- a/src/html/includes/main/visiting.html
+++ b/src/html/includes/main/visiting.html
@@ -9,6 +9,7 @@
           class="visiting__card-link"
           aria-label="Royal Palace"
           href="https://www.google.com/maps/@48.8606882,2.3356791,3a,90y,328.36h,87.55t/data=!3m7!1e1!3m5!1sAF1QipMZ9YgnArbwEIbTDANeSQYFu9gNqpW_2Sv8FBvY!2e10!3e12!7i4352!8i1815"
+          target="_blank"
         >
           <img
             class="visiting__card-img"
@@ -28,6 +29,7 @@
           class="visiting__card-link"
           aria-label="Denon Wing"
           href="https://www.google.com/maps/@48.8563254,2.3352706,3a,75y,90t/data=!3m7!1e1!3m5!1sAF1QipNRj_CwP4coDMYdCHj6qHeBeJpI2VxU5BUsOX4F!2e10!3e12!7i11000!8i5500"
+          target="_blank"
         >
           <img
             class="visiting__card-img"
@@ -47,6 +49,7 @@
           class="visiting__card-link"
           aria-label="Colonnade Perrault"
           href="https://www.google.com/maps/@48.8601723,2.3395439,3a,88.4y,322.04h,84.25t/data=!3m7!1e1!3m5!1sAF1QipNMZGQuEA-pAUvIG_eP_2f3gWTKZEJ6XLVJ-Pgb!2e10!3e12!7i10240!8i5120"
+          target="_blank"
         >
           <img
             class="visiting__card-img"
@@ -66,6 +69,7 @@
           class="visiting__card-link"
           aria-label="Greek hall"
           href="https://www.google.com/maps/@48.860183,2.3356156,3a,90y,177.69h,95.61t/data=!3m7!1e1!3m5!1sAF1QipP7uFZnTITRe-7AEVAgHAfqiCL-03gvBHcYWgF3!2e10!3e12!7i5472!8i2736"
+          target="_blank"
         >
           <img
             class="visiting__card-img"
@@ -85,6 +89,7 @@
           class="visiting__card-link"
           aria-label="Mona Lisa"
           href="https://www.google.com/maps/@48.8598788,2.3355157,3a,75y,7.53h,94t/data=!3m7!1e1!3m5!1sAF1QipO1wkUUbyzpPjj-OR0mR5etZJT-xl-40XK8rDQ3!2e10!3e12!7i10240!8i5120"
+          target="_blank"
         >
           <img
             class="visiting__card-img"
@@ -104,6 +109,7 @@
           class="visiting__card-link"
           aria-label="Night Palace"
           href="https://www.google.com/maps/@48.8563254,2.3352706,3a,90y,21.26h,79.91t/data=!3m7!1e1!3m5!1sAF1QipPpGAowYatVyk3MMGnZAaQkYm2EUk-Dlca06SS5!2e10!3e12!7i11304!8i5652"
+          target="_blank"
         >
           <img
             class="visiting__card-img"
